# SoloPlayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.md
libraries/: 30-seconds-to-mars-the_kill.gp5  alsa_utils.h  fft_utils.h  tab_parser.h  tab_translater.py
